# employee-birthdays

./: .pylintrc  CHANGELOG.md  README.md  config.example.toml  pyproject.toml  requirements.txt
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
src/: auth_credentials_storage.py  config.py  dodo_is_api.py  dodo_is_connection.py  http_clients.py  logger.py  main.py  message_queue.py  telegram.py  views.py
src/context/: accounts.py  employee_birthdays.py  events.py  units.py
src/enums/: __init__.py
src/exceptions/: parsers.py
src/models/: __init__.py  account_cookies.py  accounts.py  employee_birthdays.py  events.py
src/new_types/: __init__.py  employees.py  http_clients.py
src/parsers/: account_cookies.py  accounts.py  dodo_is_connection.py  employees.py  http_responses.py
tests/test_parsers/test_dodo_is_connection/: test_parse_employee_birthdays_html.py  test_parse_employees_list_html.py
tests/test_parsers/test_dodo_is_connection/employees_lists/: invalid_employee_id.html  multiple_employees.html  no_a_tag.html  no_employees.html  no_href_in_a_tag.html  single_employee.html
tests/test_parsers/test_employees/: test_clean_employee_full_name.py  test_employees_filter.py
