[tool.poetry]
name = "employee-birthdays"
version = "1.0.0"
description = "Notifications about employee's birthdays"
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "employee_birthdays"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic = "^2.6.3"
bs4 = "^0.0.2"
lxml = "^5.1.0"
pika = "^1.3.2"
structlog = "^24.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
