[tool.poetry]
name = "employee-birthdays"
version = "1.4.0"
description = "Notifications about employee's birthdays"
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "employee_birthdays"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic = "^2.6.3"
bs4 = "^0.0.2"
lxml = "^5.1.0"
types-beautifulsoup4 = "^4.12.0.20240511"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pylint = "^3.2.6"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    "src",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
check_untyped_defs = true

[tool.coverage.run]
omit = [
    "tests/*",
    "src/main.py",
    "src/http_clients.py",
    "src/exceptions/*",
    "src/models/*",
    "src/new_types/*",
    "src/**/__init__.py",
    "src/enums/*",
    "src/logger.py",
]